# build-swarm-v3

./: .gitignore  CHANGELOG.md  GAMEPLAN-v4.md  LICENSE  QUICKSTART.md  README.md  build-swarmv3  index.astro  pyproject.toml  schema.sql
admin/: app.js  index.html  style.css
docs/: 2026-02-16-RELIABILITY-HARDENING-PLAN.md  API.md  HANDBOOK.md  IMPLEMENTATION-STATUS.md
drone-image/: bootstrap.sh  comply-cron.sh  comply.sh  drone-lock.sh  drone-unlock.sh  drone.spec  make.conf.drone  package.accept_keywords.drone  package.list  package.use.drone  swarm-control-plane.initd
scripts/: sync-to-binhost.sh
swarm/: __init__.py  admin_server.py  cli.py  config.py  control_plane.py  db.py  drone_audit.py  drone_create.py  events.py  health.py  payloads.py  protocol_logger.py  provisioner.py  releases.py  scheduler.py  schema.sql  self_healing.py  webssh.py
swarm/backends/: __init__.py  docker.py  proxmox_lxc.py  proxmox_qemu.py  qemu_local.py  stage3.py
tests/: test_db.py  test_protocol_logger.py
